// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> renders correctly with an value 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderColor": "#e6e6f0",
      "borderRadius": 12,
      "borderWidth": 0.5,
      "flexDirection": "row",
      "height": 42,
      "marginHorizontal": 12,
      "marginTop": 12,
      "paddingHorizontal": 12,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCompleteType="off"
    onBlur={[MockFunction]}
    onChangeText={[Function]}
    placeholder="Search a pokemon..."
    rejectResponderTermination={true}
    returnKeyType="search"
    selectTextOnFocus={true}
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 12,
      }
    }
    underlineColorAndroid="transparent"
    value="Pikachu"
  />
  <Text />
</View>
`;

exports[`<SearchBar /> renders correctly without value 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "borderColor": "#e6e6f0",
      "borderRadius": 12,
      "borderWidth": 0.5,
      "flexDirection": "row",
      "height": 42,
      "marginHorizontal": 12,
      "marginTop": 12,
      "paddingHorizontal": 12,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCompleteType="off"
    onBlur={[MockFunction]}
    onChangeText={[Function]}
    placeholder="Search a pokemon..."
    rejectResponderTermination={true}
    returnKeyType="search"
    selectTextOnFocus={true}
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 12,
        "paddingVertical": 12,
      }
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;
